# VariantFlow

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  mkdocs.yml  vcf_fast_project_context.md  vcf_fast_project_spec.md
benchmark/: bcftools_columnar_baseline.sh  check_vcftools_parity.py  command_resource_metrics.py  download_public_data.sh  generate_public_benchmark_table.py  generate_stress_vcf.sh  generate_synthetic_vcf.sh  igsr_population_files.py  make_pixy_validation_data.py  normalize_tsv.py  pixy_crosscheck.py  query_parquet_duckdb.py  run_benchmarks.sh  run_v09_expression_benchmarks.sh  run_v10_columnar_workflow_benchmarks.sh  run_v10_compressed_benchmarks.sh  run_v10_parquet_benchmarks.sh  run_v11_parallel_filter_benchmarks.sh  run_v12_public_parallel_workflow_benchmarks.sh  run_v14_public_parallel_scale_benchmarks.sh  run_v17_public_format_baselines.sh  run_v17_true_population_evidence.sh  run_v18_public_format_expression_breadth.sh  run_v19_second_public_format_cohort.sh  run_v20_human_format_cohort.sh  run_v21_indexed_filter_benchmarks.sh  run_v22_scheduler_benchmarks.sh  run_v22_scheduler_matrix.sh  run_v23_bgzf_pipeline_benchmarks.sh  run_v24_index_pushdown_benchmarks.sh  run_v25_packed_genotype_benchmarks.sh  run_v26_columnar_pushdown_benchmarks.sh  run_v28_big_evidence_pass.sh  run_vcftools_parity.sh  run_vcftools_population_benchmarks.sh  scikit_allel_crosscheck.py  sfs_crosscheck.py  summarize_hyperfine.py  vcftools_population_metadata.py
docs/: bioconda-packaging.md  (+13 more)
(+138 files in other folders)
