[package]
name = "vcf-fast"
version = "0.1.0"
edition = "2024"

[features]
default = []
htslib = ["dep:rust-htslib"]
htslib-static = ["htslib", "rust-htslib/static"]

[dependencies]
anyhow = "1.0"
arrow-array = "58.2"
arrow-schema = "58.2"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-ng"] }
memchr = "2"
noodles-bgzf = { version = "0.46", features = ["libdeflate"] }
parquet = { version = "58.2", default-features = false, features = ["arrow", "snap"] }
rust-htslib = { version = "1.0", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
